--- a/backend/.env
+++ b/backend/.env
@@ -1,1 +1,2 @@
 MONGO_URL="mongodb+srv://shubhamkumar2452004_db_user:mPidp4GDMbcbuxPq@clusterone.eyboz3s.mongodb.net/?appName=ClusterOne"
+PORT=5000
