--- a/backend/routes/Configurations.json
+++ b/backend/routes/Configurations.json
@@ -1,1 +1,1 @@
-{"propertyType":"3 BHK","furnishing":"Semi-Furnished","bedrooms":0,"bathrooms":3,"balconies":2,"parking":"1 Car","flat":"Family","amenities":["Power Backup","Gym"]}
+{"propertyType":"","furnishing":"","bedrooms":null,"bathrooms":null,"balconies":null,"parking":"","flat":"","amenities":[]}
