--- a/backend/package.json
+++ b/backend/package.json
@@ -5,8 +5,7 @@
   "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server.js",
-    "dev": "nodemon server.js"
+    "start": "nodemon server.js"
   },
   "keywords": [],
   "author": "",
@@ -17,9 +16,7 @@
     "dotenv": "^17.2.3",
     "express": "^5.2.1",
     "mongoose": "^9.0.1",
-    "multer": "^2.0.2"
-  },
-  "devDependencies": {
+    "multer": "^2.0.2",
     "nodemon": "^3.1.11"
   }
 }
